changed url and baseurl
bought elphotography.fr

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: El_photography
-url:  SamD97.github.io
-baseurl: /el_photo
+url: elphotography.fr
+baseurl: 
 
 author: Disha Patel
 description: Discovering the world with my vision.
