added page of saumil

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,10 @@ collections:
     output: true
   market:
     output: true
+  ploen:
+    output: true
+  saumil:
+    output: true
 
 markdown: kramdown
 kramdown:
