--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -31,6 +31,8 @@ collections:
   cn_fishnet:
     output: true
   market:
+    output: true 
+  bastilleday:
     output: true
     
 markdown: kramdown
