--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -34,6 +34,8 @@ collections:
     output: true 
   bastilleday:
     output: true
+  kathakali:
+    output: true  
     
 markdown: kramdown
 kramdown:
