adapted for varun video gallery

--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,11 @@
 title: El_photography
-url: https://samd97.github.io/el_photo/
-baseurl: 
+url: https://saumil-sh.github.io/el_photo/
+baseurl:
 
-author: Disha Patel
-description: Discovering the world with my vision.
+author: Saumil Shah
+description: A highly automatic jekyll photo gallery.
 
 include: ['_pages']
-
-collections_dir: series
-
-collections:
-  home:
-    output: true
-  pondi:
-    output: true
-  kochi:
-    output: true
-  rj_women:
-    output: true
-  venice:
-    output: true
-  chinatown:
-    output: true
-  rimi:
-    output: true
-  london:
-    output: true
-  mumbai:
-    output: true
-  cn_fishnet:
-    output: true
-  market:
-    output: 
-  bastilleday:
-    output: true
-  kathakali:
-    output: true 
 
 markdown: kramdown
 kramdown:
