--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,12 +1,10 @@
-title: El_photography
+title: Varun Manavazhi
 url: http://127.0.0.1:4000/
 baseurl:
 
 author: Saumil Shah
-description: A highly automatic jekyll photo gallery.
+description: A highly automatic jekyll video gallery.
 
 include: ['_pages']
 
 markdown: kramdown
-kramdown:
-  input: GFM
